--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,14 +1,16 @@
 body{
     font-family: 'Orbitron', sans-serif;
 }
+
 .bg-blueDiesel{
     background-color: #112B3C;
 }
 .lettercolor{
     color: #EFEFEF !important;
 }
+
 .logo{
-    border-color: #F66B0E 6px !important;
+    border-color: #F66B0E 6px;
     width: 120px;
     height: 100%;
     display: flex;
@@ -17,32 +19,77 @@ body{
     padding-left: 2%;
 }
 
+.nav-item:hover{
+    background-color: #F66B0E;
+    border-radius: 5%;
+}
+
+.acercaDeMi .imagenquien{
+    border: #112B3C solid 2px;
+}
+
 #Banner-Section {
     background-image: url("../img/banner.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left;
     height: 100%;
-  }
+}
+
+.iconos i:hover{
+   color:#F66B0E !important;;
+}
+
 #trabajos {
     background-color: #112B3C;
 }
 #trabajo .btn{
-    background-color: #F66B0E
+    background-color: #F66B0E;
 }
 
-  .card-body img {
+.card-body img {
     width: 100%;
     height: 100%;
     
     }
-  #Mis-trabajos .image-top {
+#Mis-trabajos .image-top {
     height: 250px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-  }
+}
+.btn{
+    background-color: #112B3C;
+}
 
+.btn:hover{
+    background-color: #F66B0E;
+}
+.accordion img{
+           width: 150px;
+}
+.accordion button{
+    background-color: #112B3C !important;  
+    border: #F66B0E 1px solid;
+}
+.accordion button:hover{
+    background-color: #112B3C;  
+}
+
+.accordion-item {
+    text-align: center;
+}
+.accordion-button:focus{
+    box-shadow: #F66B0E  ;
+}
+.card-footer a{
+    background-color: #112B3C !important;  
+    margin-top: 15px;
+}
+
+footer button:hover{
+    background-color: #F66B0E;
+}
 
 #contacto{
     background-color: #F66B0E;
@@ -54,6 +101,7 @@ body{
 footer{
     background-color: #205375 ;
 }
+
 footer p{
     color: #EFEFEF;
 }
