--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -19,7 +19,7 @@ body{
     padding-left: 2%;
 }
 
-.nav-item:hover{
+.nav-item a:hover{
     background-color: #F66B0E;
     border-radius: 5%;
 }
@@ -50,7 +50,7 @@ body{
 .card-body img {
     width: 100%;
     height: 100%;
-    
+
     }
 #Mis-trabajos .image-top {
     height: 250px;
@@ -69,11 +69,11 @@ body{
            width: 150px;
 }
 .accordion button{
-    background-color: #112B3C !important;  
+    background-color: #112B3C !important;
     border: #F66B0E 1px solid;
 }
 .accordion button:hover{
-    background-color: #112B3C;  
+    background-color: #112B3C;
 }
 
 .accordion-item {
@@ -83,7 +83,7 @@ body{
     box-shadow: #F66B0E  ;
 }
 .card-footer a{
-    background-color: #112B3C !important;  
+    background-color: #112B3C !important;
     margin-top: 15px;
 }
 
@@ -93,7 +93,7 @@ footer button:hover{
 
 #contacto{
     background-color: #F66B0E;
-} 
+}
 #contacto p{
     color: #EFEFEF !important;
 }
