--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -43,6 +43,7 @@ body{
 #trabajos {
     background-color: #112B3C;
 }
+
 #trabajo .btn{
     background-color: #F66B0E;
 }
@@ -50,8 +51,8 @@ body{
 .card-body img {
     width: 100%;
     height: 100%;
+}
 
-    }
 #Mis-trabajos .image-top {
     height: 250px;
     background-repeat: no-repeat;
@@ -79,9 +80,9 @@ body{
 .accordion-item {
     text-align: center;
 }
-.accordion-button:focus{
+/* .accordion-button:focus{
     box-shadow: #F66B0E  ;
-}
+} */
 .card-footer a{
     background-color: #112B3C !important;
     margin-top: 15px;
