--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -80,9 +80,9 @@ body{
 .accordion-item {
     text-align: center;
 }
-/* .accordion-button:focus{
+.accordion-button:click{
     box-shadow: #F66B0E  ;
-} */
+} 
 .card-footer a{
     background-color: #112B3C !important;
     margin-top: 15px;
